# serr

./: .gitignore  Cargo.toml  LICENSE
serr/: Cargo.toml
serr/src/: lib.rs  serialized_error.rs
serr_derive/: Cargo.toml
serr_derive/src/: expand.rs  lib.rs  parser.rs
serr_tests/: Cargo.toml
serr_tests/src/: derive_tests.rs  lib.rs
serr_tests/src/tests/fixtures/: mod.rs  nested.rs  nested_with_fields.rs  simple.rs  simple_with_name.rs  with_fields.rs
