[package]
name = "serr"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

serr_derive = { version = "0.2.0", optional = true, path = "../serr_derive" }

[dev-dependencies]
serr_derive = { version = "0.2.0", path = "../serr_derive" }

[features]
derive = ["dep:serr_derive"]
